unpackaged/main/default/objects/Activity/fields/Strategy_Deck__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Deck__c</fullName>
    <label>Strategy Deck</label>
    <type>Url</type>
</CustomField>