unpackaged/main/default/objects/Activity/fields/Subtype__c.field-meta.xml
<CustomField>
    <fullName>Subtype__c</fullName>
    <label>Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SEO Migration Service is not Done</fullName>
            </value>
            <value>
                <fullName>Implement the redirects for key pages</fullName>
            </value>
            <value>
                <fullName>Preserve the content of these key pages</fullName>
            </value>
            <value>
                <fullName>Fix the following broken links</fullName>
            </value>
            <value>
                <fullName>Target neighborhoods are not in one State/County</fullName>
            </value>
            <value>
                <fullName>Locations cannot be found in Google Maps:</fullName>
            </value>
            <value>
                <fullName>Locations aren&#39;t available in the neighborhood data section</fullName>
            </value>
            <value>
                <fullName>People are not searching the following location(s) by name</fullName>
            </value>
            <value>
                <fullName>There are no MLS listings for the following areas</fullName>
            </value>
            <value>
                <fullName>The KWA Service is not complete</fullName>
            </value>
            <value>
                <fullName>The location for the KWA is not one of the neighborhood/MLS pages</fullName>
            </value>
            <value>
                <fullName>Neighborhood Guide Content</fullName>
            </value>
            <value>
                <fullName>Neighborhood Data Elements</fullName>
            </value>
            <value>
                <fullName>Neighborhood Map &amp; Properties</fullName>
            </value>
            <value>
                <fullName>IDX integration is not complete</fullName>
            </value>
            <value>
                <fullName>Listings are not populating</fullName>
            </value>
            <value>
                <fullName>GBP Set Up Service is not complete</fullName>
            </value>
            <value>
                <fullName>NAP is not consistent with Salesforce/GBP/USPS</fullName>
            </value>
            <value>
                <fullName>&quot;Detail Pages&quot; do not follow metadata best practices:</fullName>
            </value>
            <value>
                <fullName>Other pages do not follow metadata best practices:</fullName>
            </value>
            <value>
                <fullName>Correct GBP URL</fullName>
            </value>
            <value>
                <fullName>Review GBP URL</fullName>
            </value>
            <value>
                <fullName>Website 404 Check</fullName>
            </value>
            <value>
                <fullName>Key Pages Migration Verification</fullName>
            </value>
            <value>
                <fullName>GSC 404/Soft 404 Errors</fullName>
            </value>
            <value>
                <fullName>Meta Robots Check</fullName>
            </value>
            <value>
                <fullName>Indexing Check</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>