unpackaged/main/default/objects/Activity/fields/To_do_End_Date__c.field-meta.xml
<CustomField>
    <fullName>To_do_End_Date__c</fullName>
    <label>To-do End Date</label>
    <type>DateTime</type>
</CustomField>