unpackaged/main/default/objects/Activity/fields/To_do_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>To_do_Start_Date__c</fullName>
    <label>To-do Start Date</label>
    <type>DateTime</type>
</CustomField>