unpackaged/main/default/objects/Activity/fields/Turnaround_time__c.field-meta.xml
<CustomField>
    <fullName>Turnaround_time__c</fullName>
    <formula>IF(((
ROUND( 8 * (
   ( 5 * FLOOR( ( DATEVALUE(  CompletedDateTime  ) - DATE( 1900, 1, 8) ) / 7) +
    MIN(5, 
     MOD( DATEVALUE( CompletedDateTime) - DATE( 1900, 1, 8), 7) +
     MIN( 1, 24 / 8 * ( MOD(CompletedDateTime  - DATETIMEVALUE( &#39;1900-01-08 13:00:00&#39; ), 1 ) ) )
    ) 
   )
 -
   ( 5 * FLOOR( ( DATEVALUE( CreatedDate ) - DATE( 1900, 1, 8) ) / 7) +
     MIN( 5,
      MOD( DATEVALUE( CreatedDate ) - DATE( 1996, 1, 1), 7 ) +
      MIN( 1, 24 / 8 * ( MOD( CreatedDate - DATETIMEVALUE( &#39;1900-01-08 13:00:00&#39; ), 1) ) )
    )
   ) 
  ), 
0 )
)/8)&gt;0,(
ROUND( 8 * (
   ( 5 * FLOOR( ( DATEVALUE(  CompletedDateTime  ) - DATE( 1900, 1, 8) ) / 7) +
    MIN(5, 
     MOD( DATEVALUE( CompletedDateTime) - DATE( 1900, 1, 8), 7) +
     MIN( 1, 24 / 8 * ( MOD(CompletedDateTime  - DATETIMEVALUE( &#39;1900-01-08 13:00:00&#39; ), 1 ) ) )
    ) 
   )
 -
   ( 5 * FLOOR( ( DATEVALUE( CreatedDate ) - DATE( 1900, 1, 8) ) / 7) +
     MIN( 5,
      MOD( DATEVALUE( CreatedDate ) - DATE( 1996, 1, 1), 7 ) +
      MIN( 1, 24 / 8 * ( MOD( CreatedDate - DATETIMEVALUE( &#39;1900-01-08 13:00:00&#39; ), 1) ) )
    )
   ) 
  ), 
0 )
)/8,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Turnaround time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>