unpackaged/main/default/objects/Activity/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SEO Migration (Pre Launch)</fullName>
            </value>
            <value>
                <fullName>Definition</fullName>
            </value>
            <value>
                <fullName>Viable Location</fullName>
            </value>
            <value>
                <fullName>Keyword Analysis + Content Strategy</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>MLS/Property Listings</fullName>
            </value>
            <value>
                <fullName>GBP Set Up</fullName>
            </value>
            <value>
                <fullName>Consistent NAP</fullName>
            </value>
            <value>
                <fullName>Metadata</fullName>
            </value>
            <value>
                <fullName>Alt-Text</fullName>
            </value>
            <value>
                <fullName>GBP URL</fullName>
            </value>
            <value>
                <fullName>SEO Migration (Post Launch)</fullName>
            </value>
            <value>
                <fullName>Bright Local</fullName>
            </value>
            <value>
                <fullName>Link Building</fullName>
            </value>
            <value>
                <fullName>CRO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>